added get for dev solutions
